Update README for both Swing bridge and JavaFX adapter
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>